# Beijing_House_Price_Predictions

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  setup.py
.circleci/: config.yml
beijing_house_price_predictions/: pyproject.toml
beijing_house_price_predictions/preprocessing/: data_type_conversion.py  missing_data_imputer.py  select_features.py
model_api/: Dockerfile  Makefile  diff_test_requirements.txt  pyproject.toml  requirements.txt  run.sh
model_api/api/: __init__.py  config.py  controller.py  validation.py
model_api/tests/: capture_model_predictions.py  test_controller.py  test_validation.py
model_api/tests/differential_tests/: test_differential.py
notebooks/: Beijing House Price Predictions.ipynb
price_prediction_model/: Makefile  README.rst  __init__.py  pyproject.toml  setup.py
price_prediction_model/config/: config.py
price_prediction_model/features/: floors.py  moving_average.py  select_features.py  target_var.py  year_month_from_date.py
price_prediction_model/model/: model_pipeline.py  predict.py  train.py
price_prediction_model/preprocessing/: data_type_conversion.py  missing_data_imputer.py  select_features.py  select_rows.py  special_value_encoding.py
price_prediction_model/scripts/: fetch_kaggle_dataset.sh
price_prediction_model/tests/: test_prediction.py
price_prediction_model/trained_model_files/: lightgbm_regression_model_v1.0.1.pkl
price_prediction_model/utils/: generate_test_dataset.py  utils.py  validation.py
scripts/: fetch_kaggle_dataset.sh
tests/: test_prediction.py
(+1 files in other folders)
