[tool.poetry]
name = "price_prediction_model_API"
version = "1.0.0"
description = "API that serves lightGBM regression model to predict house prices in Beijing"
authors = ["Bowen"]

[tool.poetry.dependencies]
python = "^3.7"
marshmallow = "2.17.0"
flask = ">=1.1.1,<1.2.0"


[tool.poetry.dev-dependencies]
black = "==19.3b0"
pytest = "*"
nb-black = "*"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}